--- a/app/templates/GM_add_shop.html
+++ b/app/templates/GM_add_shop.html
@@ -96,8 +96,8 @@
 
     <!-- Navigation Buttons -->
     <div class="button-container">
-        <a href="{{ url_for('gm.view_shops') }}" class="button">All Shops</a>
-        <a href="{{ url_for('gm.home') }}" class="button">Game Master Interface</a>
+        <a href="{{ url_for('gm.gm_view_shops') }}" class="button">All Shops</a>
+        <a href="{{ url_for('gm.gm_home') }}" class="button">Game Master Interface</a>
     </div>
 
     <!-- Form to Add Shop -->
