--- a/app/templates/GM_edit_item.html
+++ b/app/templates/GM_edit_item.html
@@ -110,8 +110,8 @@
     <h1>Edit {{ item.name }}</h1>
 
     <div class="nav-buttons">
-        <a href="{{ url_for('gm.view_items') }}" class="button">All Items</a>
-        <a href="{{ url_for('gm.home') }}" class="button">Game Master Interface</a>
+        <a href="{{ url_for('gm.gm_view_items') }}" class="button">All Items</a>
+        <a href="{{ url_for('gm.gm_home') }}" class="button">Game Master Interface</a>
     </div>
 
     <form method="POST">
