--- a/app/templates/GM_view_items.html
+++ b/app/templates/GM_view_items.html
@@ -161,8 +161,8 @@
 <body>
     <h1>View Items</h1>
     <div class="nav-buttons">
-        <button onclick="navigateTo('{{ url_for('gm.add_item') }}')" class="button">Add New Item</button>
-        <button onclick="navigateTo('{{ url_for('gm.home') }}')" class="nav-button">Back to Dashboard</button>
+        <button onclick="navigateTo('{{ url_for('gm.gm_add_item') }}')" class="button">Add New Item</button>
+        <button onclick="navigateTo('{{ url_for('gm.gm_home') }}')" class="nav-button">Back to Dashboard</button>
     </div>
     <div class="content-container">
         <div class="section">
@@ -186,8 +186,8 @@
                         <td>{{ item.rarity }}</td>
                         <td>{{ item.price }}</td>
                         <td>
-                            <button class="button" onclick="navigateTo('{{ url_for('gm.edit_item', item_id=item.item_id) }}')">Edit</button>
-                            <button class="button" onclick="navigateTo('{{ url_for('gm.item_detail', item_id=item.item_id) }}')">View Details</button>
+                            <button class="button" onclick="navigateTo('{{ url_for('gm.gm_edit_item', item_id=item.item_id) }}')">Edit</button>
+                            <button class="button" onclick="navigateTo('{{ url_for('gm.gm_item_detail', item_id=item.item_id) }}')">View Details</button>
                             <button class="delete-button" onclick="showDeleteConfirmation({{ item.item_id }}, '{{ item.name }}')">Delete</button>
                         </td>
                     </tr>
