--- a/app/templates/GM_edit_shop.html
+++ b/app/templates/GM_edit_shop.html
@@ -99,8 +99,8 @@
 
     <!-- Navigation Button Container -->
     <div class="nav-buttons">
-        <a href="{{ url_for('gm.view_shops') }}" class="button">All Shops</a>
-        <a href="{{ url_for('gm.home') }}" class="button">Game Master Interface</a>
+        <a href="{{ url_for('gm.gm_view_shops') }}" class="button">All Shops</a>
+        <a href="{{ url_for('gm.gm_home') }}" class="button">Game Master Interface</a>
     </div>
 
     <!-- Centered Form -->
@@ -140,7 +140,7 @@
     </form>
 
     <!-- Form for Deleting the Shop -->
-    <form method="POST" action="{{ url_for('gm.delete_shop', shop_id=shop.shop_id) }}">
+    <form method="POST" action="{{ url_for('gm.gm_delete_shop', shop_id=shop.shop_id) }}">
         <button type="submit" style="background-color: red;">Delete Shop</button>
     </form>
 </body>
