--- a/app/templates/GM_item_detail.html
+++ b/app/templates/GM_item_detail.html
@@ -110,8 +110,8 @@
 
     <!-- Navigation Button Container -->
     <div class="nav-buttons">
-        <a href="{{ url_for('gm.view_items') }}" class="button">All Items</a>
-        <a href="{{ url_for('gm.home') }}" class="button">Game Master Interface</a>
+        <a href="{{ url_for('gm.gm_view_items') }}" class="button">All Items</a>
+        <a href="{{ url_for('gm.gm_home') }}" class="button">Game Master Interface</a>
     </div>
 
     <!-- Centered Form -->
