--- a/app/templates/GM_view_shops.html
+++ b/app/templates/GM_view_shops.html
@@ -161,8 +161,8 @@
 <body>
     <h1>View Shops</h1>
     <div class="nav-buttons">
-        <button onclick="navigateTo('{{ url_for('gm.add_shop') }}')" class="button">Add New Shop</button>
-        <button onclick="navigateTo('{{ url_for('gm.home') }}')" class="nav-button">Back to Dashboard</button>
+        <button onclick="navigateTo('{{ url_for('gm.gm_add_shop') }}')" class="button">Add New Shop</button>
+        <button onclick="navigateTo('{{ url_for('gm.gm_home') }}')" class="nav-button">Back to Dashboard</button>
     </div>
     <div class="content-container">
         <div class="section">
@@ -186,8 +186,8 @@
                         <td>{{ shop.quality }}</td>
                         <td>{{ shop.size }}</td>
                         <td>
-                            <button class="button" onclick="navigateTo('{{ url_for('gm.edit_shop', shop_id=shop.shop_id) }}')">Edit</button>
-                            <button class="button" onclick="navigateTo('{{ url_for('gm.view_shop_items', shop_id=shop.shop_id) }}')">View Items</button>
+                            <button class="button" onclick="navigateTo('{{ url_for('gm.gm_edit_shop', shop_id=shop.shop_id) }}')">Edit</button>
+                            <button class="button" onclick="navigateTo('{{ url_for('gm.gm_view_shop_items', shop_id=shop.shop_id) }}')">View Items</button>
                             <button class="delete-button" onclick="showDeleteConfirmation({{ shop.shop_id }}, '{{ shop.name }}')">Delete</button>
                         </td>
                     </tr>
